* protocol
  - new commands "addtagid", "cleartagid"
  - "lsinfo" and "readcomments" allowed for remote files
  - "listneighbors" lists file servers on the local network
  - "playlistadd" supports file:///
  - "idle" with unrecognized event name fails
* database
  - proxy: forward "idle" events
  - proxy: copy "Last-Modified" from remote directories
  - upnp: new plugin
* storage
  - music_directory can point to a remote file server
  - nfs: new plugin
  - smbclient: new plugin
* playlist
  - soundcloud: use https instead of http
  - soundcloud: add default API key
* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - nfs: new input plugin
  - smbclient: new input plugin
* filter
  - volume: improved software volume dithering
* encoder:
  - shine: new encoder plugin
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* new resampler option using libsoxr
* allow playlist directory without music directory
* install systemd unit for socket activation
* Android port

ver 0.18.9 (not yet released)
* decoder
  - vorbis: fix linker failure when libvorbis/libogg are static
* encoder
  - vorbis: fix another linker failure
* output
  - pipe: fix hanging child process due to blocked signals

ver 0.18.8 (2014/02/07)
* decoder
  - ffmpeg: support libav v10_alpha1
* encoder
  - vorbis: fix linker failure
* output
  - roar: documentation
* more robust Icy-Metadata parser
* fix Solaris build failure

ver 0.18.7 (2014/01/13)
* playlist
  - pls: fix crash after parser error
  - soundcloud: fix build failure with libyajl 2.0.1
* decoder
  - faad: fix memory leak
  - mpcdec: reject libmpcdec SV7 in configure script
* daemon: don't initialize supplementary groups when already running
  as the configured user

ver 0.18.6 (2013/12/24)
* input
  - cdio_paranoia: support libcdio-paranoia 0.90
* tags